# wnd-charm

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  build.sh  config.h.in  config.status  configure  configure.ac  docker.README.md  libtool  setup.py  tags
autom4te.cache/: output.1  traces.1
docker/: Dockerfile  jupyterhub_config.py
examples/: ClassificationMask.py  FeaturesWithoutTiff.ipynb  classification_mask.py  classifier_cross_validation.py  classifier_fit_on_fit.py  continuous_classification.py  generate_graphs_from_c-chrm_HTML_report.py  multiprocessing_calc_large_feat_set.py  num_feature_variation_analysis.py  real_time_classifier.py  wndchrm-worker.py
pychrm/: ArtificialFeatureSets.py  FeatureNameMap.py  FeatureRegistration.py  FeatureSet.py  Makefile.am  Makefile.in  PyImageMatrix.py  TrainingSet.py  __init__.py  calculate_sig.py  fitfile.py  pychrm.py  setup.py
pychrm/swig/: FeatureAlgorithms.i  FeatureTransforms.i  ImageTransforms.i  SharedImageMatrix.i  Tasks.i  cmatrix.i  pychrm.i  pychrm_wrap.cpp  pychrm_wrap.cxx  wndchrm_error.i
src/: FeatureAlgorithms.cpp  FeatureAlgorithms.h  FeatureNames.cpp  FeatureNames.h  FeatureTransforms.cpp  FeatureTransforms.h  ImageTransforms.cpp  ImageTransforms.h  Makefile  Makefile.am  Makefile.in  OldFeatureNamesFileStr.h  SharedImageMatrix.cpp  SharedImageMatrix.h  SharedMatrix.cpp  SharedMatrix.h  Tasks.cpp  Tasks.h  WORMfile.cpp  WORMfile.h  cmatrix.cpp  cmatrix.h  common.cu  common.h  fft2.cu  fft2.cuh  gpu_convolve.cu  gpu_convolve.cuh  wndchrm_error.cpp  wndchrm_error.h
src/Eigen/: sources.am
src/Eigen/src/Core/products/: SelfadjointMatrixVector.h
src/Eigen/src/Core/util/: Memory.h
src/Eigen/src/Eigenvalues/: ComplexSchur.h  Tridiagonalization.h
src/Eigen/src/QR/: HouseholderQR.h
src/b64/: cdecode.c  cencode.c  cencode.h  encode.h
src/colors/: FuzzyCalc.cpp  FuzzyCalc.h
src/digest/: md5.cpp  md5.h  sha1.cpp  sha1.h
src/gsl/: specfunc.cpp  specfunc.h
src/sha1/: sha1.cpp  sha1.h
src/statistics/: CombFirst4Moments.cpp  CombFirst4Moments.h  CombFirst4Moments_gpu.cu  FeatureStatistics.cpp  FeatureStatistics.h  FeatureStatistics_kernel.cu  Moments.h
src/textures/: gabor.cpp  gabor.h  gpu_conv2comp.cu  gpu_conv2comp.cuh  tamura.cpp  tamura.h  tamura_cuda.h  tamura_kernel.cu
src/textures/haarlick/: CVIPtexture.h  haarlick.cpp  haarlick.h
src/textures/haralick/: CVIPtexture.cpp  CVIPtexture.h  f14_maxcorr_gpu.cu  haralick.cpp  haralick.h  mapkit.cpp  mapkit.h  mapkit_generic.cpp  mapkit_generic.h
src/textures/zernike/: complex.cpp  complex.h  zernike.cpp  zernike.h  zernike_kernel.cu
src/transforms/: ChebyshevFourier.cpp  ChebyshevFourier.h  chebyshev.cpp  chebyshev.h  chebyshev_kernel.cu  radon.cpp  radon.h
src/transforms/fft/: fftw3.h
src/transforms/fft/bcb_fftw3/: fftw3.h
src/transforms/wavelet/: Common.cpp  Common.h  DataGrid.h  DataGrid2D.cpp  DataGrid2D.h  DataGrid3D.cpp  DataGrid3D.h  Filter.cpp  Filter.h  FilterSet.cpp  FilterSet.h  Symlet5.cpp  Symlet5.h  Wavelet.cpp  Wavelet.h  WaveletHigh.cpp  WaveletHigh.h  WaveletLow.cpp  WaveletLow.h  WaveletMedium.cpp  WaveletMedium.h  convolution.cpp  convolution.h  wt.cpp  wt.h
src/wndchrm/: unordered_map_dfn.h
src/wndchrm_src/: TrainingSet.cpp  TrainingSet.h  WORMfile.cpp  WORMfile.h  signatures.cpp  signatures.h  wndchrm.cpp
tests/: test01-calc_sigs.py  test02-fisher_weights.py  test03-WND5.py
tests/pychrm_tests/: test-0032-0008-0008.tif  test-0032-0016-0016.tif  test01-calc_sigs.py  test_ArtificialFeatureSets.py  test_Pychrm.py
tests/pywndcharm_tests/: README  lymphoma_eosin_channel_MCL_test_img_sj-05-3362-R2_001_E-t6x5_5_4-l.sig  lymphoma_eosin_channel_MCL_test_img_sj-05-3362-R2_001_E-t6x5_5_4-l.tiff  lymphoma_eosin_channel_MCL_test_img_sj-05-3362-R2_001_E.tif  lymphoma_iicbu2008_subset_EOSIN_ONLY_sigfiles_MIDDLE_4_TILES_t5x6-l.fof.tsv  lymphoma_iicbu2008_subset_eosin_t5x6_v3.2feats_REFERENCE_RESULTS_30_samples_tiled_TRAINING_ERROR.html  lymphoma_iicbu2008_subset_eosin_t5x6_v3.2feats_REFERENCE_RESULTS_900_samples_TRAINING_ERROR.html  lymphoma_t5x6_10imgseach_WITHOUT_tiled_samples.html  lymphoma_t5x6_10imgseach_WITH_tiled_samples.html  test-l_training_error_result.html  test_ArtificialFeatureSets.py  test_ArtificialFeatureSpace.py  test_BatchClassificationResult.py  test_ClassificationExperimentResult.py  test_FeatureCalculation.py  test_FeatureSet.py  test_FeatureSpace.py  test_FeatureSpacePrediction.py  test_FeatureSpacePredictionExperiment.py  test_FeatureVector.py  test_FeatureWeights.py  test_FisherFeatureWeights.py  test_Graphs.py  test_PyImageMatrix.py  test_SingleSamplePrediction.py  test_WND5.py  test_graph_fromHTML.npy  test_graph_kernel_smoothed.npy  test_graph_rank_ordered_experiment.npy  test_graph_rank_ordered_interpolated_discrete.npy  test_parallel_compute.py  test_visualization.py  test_wndcharm.py
tests/wndchrm_tests/: 010067_301x300-l_precalculated.sig  010067_301x300.tif  TestUtil.pm  WORMfile_test.cpp  t1_s01_c05_ij-l_precalculated.sig  t1_s01_c05_ij.tif  test-l.fit  test01-classify.pl  test02-test.pl  test03-pearson.pl  test04-sigs.pl  test_fit-l-normalized.fit  test_fit-l.weights  unbalanced.fit
tests/wndchrm_tests/Statistics/: Descriptive.pm  Distributions.pm  PointEstimation.pm  TTest.pm
tests/wndchrm_tests/images/binuc/: binuc1.tiff  binuc2.tiff  binuc3.tiff  binuc4.tiff  binuc5.tiff
tests/wndchrm_tests/images/norm/: norm1.tiff  norm2.tiff  norm3.tiff
wndcharm/: ArtificialFeatureSets.py  ArtificialFeatureSpace.py  FeatureNameMap.py  FeatureRegistration.py  FeatureSet.py  FeatureSpace.py  FeatureSpacePrediction.py  FeatureSpacePredictionExperiment.py  FeatureVector.py  FeatureWeights.py  PyImageMatrix.py  SingleSamplePrediction.py  __init__.py  utils.py  visualization.py
wndcharm/swig/: FeatureAlgorithms.i  FeatureNames.i  ImageTransforms.i  Tasks.i  cmatrix.i  pychrm.i  wndcharm.i  wndchrm_error.i
